corrected alignment issues. added iconlabels

--- a/portfolio/_components.scss
+++ b/portfolio/_components.scss
@@ -5,11 +5,12 @@
     grid-gap:30px;
     grid-template-columns: repeat(3,1fr);
     padding-top: 30px;
+    
 }
 
 //project section cards
 .card {
-    width: 70vw;
+    width: 60vw;
     height: 550px;
     margin: 17px;
     
