--- a/portfolio/_layouts.scss
+++ b/portfolio/_layouts.scss
@@ -1,9 +1,9 @@
 @use "./variables" as *;
 
 .header {
-    width: 100vw;
-    height: 516px;
-    margin: 30px auto;
+    width: 70vw;
+    height: 600px;
+    display: block;
     
         
 &__h1 {
@@ -14,14 +14,14 @@
 
 
 &__h2 {
-    font-size: 64px;
-    line-height: 76.5px;
+    font-size: 55px;
     padding-top: 20px;
+    width: 65vw;
 }
 }
 
 .about {
-    width: 70vw;
+    width: 65vw;
     height: 1281px;
     display: flex;
     flex-direction: column;
@@ -34,13 +34,15 @@
     text-align: center;
     padding-bottom: 20px;
     text-decoration: underline 8px solid $color-salmon;
+    width: 60vw;
     
 }
 
 &__image {
-    width:80vw;
+    width:60vw;
     border-radius: 2%;
-    margin-left: 30px;
+    
+    
 }
 
 &__text {
@@ -54,7 +56,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 70vw;
+    width: 65vw;
 
 &__title {
     font-size: 32px;
@@ -84,9 +86,9 @@
 }
 
 .footer {
-    background-color: $color-black;
+    background-color: $color-gray;
     height:216px;
-    width: 90vw;
+    width: 70vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
