--- a/portfolio/_variables.scss
+++ b/portfolio/_variables.scss
@@ -5,3 +5,4 @@
     $color-white: white;
     $color-linen: linen;
     $color-salmon: salmon;
+    $color-gray: rgb(59, 59, 59);
